--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -62,21 +62,25 @@ jobs:
         containers: ${{ fromJSON(needs.concurrency.outputs.threads) }}
 
     steps:
+      - name: Configure secrets
+        if: ${{ !env.ACT }} 
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+            role-to-assume: arn:aws:iam::814827541967:role/GithubOIDC-Role-QMKR3DR5WV3B
+            aws-region: 'us-east-1'
+        
       - name: Run end-to-end tests with Currents dev
         uses: Bowery-RES/action-run-e2e-tests@latest
         with:
           github_token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
           url: ${{ github.event.inputs.url }}
           customUrl: ${{ github.event.inputs.customUrl }}
           spec_file: ${{ github.event.inputs.spec_file }}
           tags: ${{ github.event.inputs.tags }}
-          record_key: ${{ secrets.CURRENTS_RECORD_KEY }}
           ref: ${{ github.event.inputs.ref }}
+          secret_name: 'Github/Cypress/webapp-e2e-secrets'
         env:
           DD_CIVISIBILITY_AGENTLESS_ENABLED: true
-          DD_API_KEY: ${{ secrets.DD_API_KEY }}
           DD_ENV: ${{ github.event.inputs.url }}
           DD_SERVICE: 'webapp'
 
