--- a/.github/workflows/regression_weekly_scheduled.yaml
+++ b/.github/workflows/regression_weekly_scheduled.yaml
@@ -18,18 +18,22 @@ jobs:
         containers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
 
     steps:
+      - name: Configure secrets
+        if: ${{ !env.ACT }} 
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+            role-to-assume: arn:aws:iam::814827541967:role/GithubOIDC-Role-QMKR3DR5WV3B
+            aws-region: 'us-east-1'
+
       - name: Run weekly regression end-to-end tests with Currents dev
         uses: Bowery-RES/action-run-e2e-tests@latest
         with:
           github_token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
           url: staging
           spec_file: cypress/integration/not_full_reports/**
           tags: grep=,grepTags=-@smoke,burn=
-          record_key: ${{ secrets.CURRENTS_RECORD_KEY }}
+          secret_name: 'Github/Cypress/webapp-e2e-secrets'
         env:
           DD_CIVISIBILITY_AGENTLESS_ENABLED: true
-          DD_API_KEY: ${{ secrets.DD_API_KEY }}
           DD_ENV: 'staging'
           DD_SERVICE: 'webapp'
