[QA-6583] Add task to copy reports to cypress/archive folder

--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -98,5 +98,5 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: downloaded-reports
-          path: cypress/downloads
+          path: cypress/archive
           retention-days: 2
