--- a/.github/workflows/complex-webapp_weekday_schedule.yml
+++ b/.github/workflows/complex-webapp_weekday_schedule.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   Comp_plex-cy-e2e-run-on-dev:
     runs-on: ubuntu-latest
-    timeout-minutes: 25
+    timeout-minutes: 20
     container: cypress/included:10.3.1
     permissions:
       id-token: write
@@ -25,16 +25,16 @@ jobs:
             role-to-assume: arn:aws:iam::814827541967:role/GithubOIDC-Role-QMKR3DR5WV3B
             aws-region: 'us-east-1'
 
-      - name: Run every weekday Comp-plex end-to-end tests with Currents dev
+      - name: Run every weekday WebApp+Comp-plex end-to-end tests with Currents dev
         uses: Bowery-RES/action-run-e2e-tests@latest
         with:
           github_token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          url: compDev
-          spec_file: cypress/integration/comp_plex/**
+          url: dev
+          spec_file: cypress/integration/**
           tags: grep=,grepTags=@comp_plex,burn=
           secret_name: 'Github/Cypress/webapp-e2e-secrets'
         env:
           DD_CIVISIBILITY_AGENTLESS_ENABLED: true
-          DD_ENV: 'compDev'
-          DD_SERVICE: 'comp_plex'
+          DD_ENV: 'dev'
+          DD_SERVICE: 'webapp'
           
