--- a/.github/workflows/complex_weekday_scheduled.yml
+++ b/.github/workflows/complex_weekday_scheduled.yml
@@ -1,13 +1,13 @@
-name: WebApp + Comp-plex scheduled run on dev
+name: Comp-plex scheduled run on dev
 
 on:
   schedule:
-    - cron: 00 04 * * * #Run e2e tests every day at 4 AM UTC
+    - cron: 00 05 * * * #Run e2e tests every day at 5 AM UTC
 
 jobs:
   Comp_plex-cy-e2e-run-on-dev:
     runs-on: ubuntu-latest
-    timeout-minutes: 20
+    timeout-minutes: 25
     container: cypress/included:10.3.1
     permissions:
       id-token: write
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        containers: [1, 2, 3, 4]
+        containers: [1, 2, 3]
 
     steps:
       - name: Configure secrets
@@ -25,15 +25,16 @@ jobs:
             role-to-assume: arn:aws:iam::814827541967:role/GithubOIDC-Role-QMKR3DR5WV3B
             aws-region: 'us-east-1'
 
-      - name: Run every weekday WebApp + Comp-plex end-to-end tests with Currents dev
+      - name: Run every weekday Comp-plex end-to-end tests with Currents dev
         uses: Bowery-RES/action-run-e2e-tests@latest
         with:
           github_token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
-          url: dev
-          spec_file: cypress/integration/**
-          tags: grep=,grepTags=@comp_plex,burn=
+          url: compDev
+          spec_file: cypress/integration/comp_plex/**
+          tags: grep=,grepTags=-@smoke,burn=
           secret_name: 'Github/Cypress/webapp-e2e-secrets'
         env:
           DD_CIVISIBILITY_AGENTLESS_ENABLED: true
-          DD_ENV: 'dev'
-          DD_SERVICE: 'webapp'
+          DD_ENV: 'compDev'
+          DD_SERVICE: 'comp_plex'
+          
