--- a/.github/workflows/debug.ci.yml
+++ b/.github/workflows/debug.ci.yml
@@ -37,7 +37,7 @@ jobs:
   Not-full-reports-run-DEBUG:
     runs-on: ubuntu-latest
     timeout-minutes: 100
-    container: cypress/included:10.3.1
+    container: pumple/bowery-automation:latest
     permissions:
       id-token: write
       contents: read
