--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -36,7 +36,7 @@ jobs:
   Smoke-tests-run:
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    container: cypress/included:10.8.0
+    container: boweryautomation/cypress-latest-chrome-latest
     permissions:
       id-token: write
       contents: read
