--- a/.github/workflows/complex_weekday_scheduled.yml
+++ b/.github/workflows/complex_weekday_scheduled.yml
@@ -8,7 +8,7 @@ jobs:
   Comp_plex-cy-e2e-run-on-dev:
     runs-on: ubuntu-latest
     timeout-minutes: 25
-    container: cypress/included:10.8.0
+    container: boweryautomation/cypress-latest-chrome-latest
     permissions:
       id-token: write
       contents: read
