--- a/.github/workflows/full_reports.yml
+++ b/.github/workflows/full_reports.yml
@@ -25,7 +25,7 @@ on:
 jobs:
   Full-reports-run:
     runs-on: ubuntu-latest
-    container: cypress/included:10.8.0
+    container: boweryautomation/cypress-latest-chrome-latest
     permissions:
       id-token: write
       contents: read
