--- a/.github/workflows/smoke_daily_scheduled.yml
+++ b/.github/workflows/smoke_daily_scheduled.yml
@@ -8,7 +8,7 @@ jobs:
   Smoke-tests-run-daily:
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    container: cypress/included:10.8.0
+    container: boweryautomation/cypress-latest-chrome-latest
     permissions:
       id-token: write
       contents: read
