--- a/docker/Dockerfile.cypress
+++ b/docker/Dockerfile.cypress
@@ -28,14 +28,13 @@ RUN echo "whoami: $(whoami)" \
   && npm install -g typescript \
   && npm install -g "cypress@10.8.0" \
   && npm install -g find-cypress-specs \
-  && (node -p "process.env.CI_XBUILD && process.arch === 'arm64' ? 'Skipping cypress verify on arm64 due to SIGSEGV.' : process.exit(1)" \
-    || (cypress verify \
+  && cypress verify \
     # Cypress cache and installed version
     # should be in the root user's home folder
     && cypress cache path \
     && cypress cache list \
     && cypress info \
-    && cypress version)) \
+    && cypress version \
   # give every user read access to the "/root" folder where the binary is cached
   # we really only need to worry about the top folder, fortunately
   && ls -la /root \
@@ -43,7 +42,6 @@ RUN echo "whoami: $(whoami)" \
   # Show where Node loads required modules from
   && node -p 'module.paths' \
   # should print Cypress version
-  # plus Electron and bundled Node versions
   && cypress version \
   && echo  " node version:    $(node -v) \n" \
     "npm version:     $(npm -v) \n" \
