--- a/.github/workflows/pull_request_check.yml
+++ b/.github/workflows/pull_request_check.yml
@@ -25,6 +25,7 @@ jobs:
     needs: Run-tsc-check
     timeout-minutes: 20
     runs-on: ubuntu-latest
+    if: github.event.label.name != 'ready_for_review'
     container: boweryautomation/cypress-latest-chrome-latest
     permissions:
       id-token: write
