--- a/.github/workflows/complex_weekday_scheduled.yml
+++ b/.github/workflows/complex_weekday_scheduled.yml
@@ -31,7 +31,7 @@ jobs:
           github_token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           url: compDev
           spec_file: cypress/integration/comp_plex/**
-          tags: grep=,grepTags=-@smoke,burn=
+          tags: grepTags=-@smoke
           secret_name: 'Github/Cypress/webapp-e2e-secrets'
         env:
           DD_CIVISIBILITY_AGENTLESS_ENABLED: true
