[QA-6874] fixed other workflows: removed cypress-grep related env vars; fixed package json

--- a/.github/workflows/debug.act.yml
+++ b/.github/workflows/debug.act.yml
@@ -36,7 +36,7 @@ on:
         type: string
         description: Run tests with specific tags
         required: false
-        default: grep=,grepTags=,burn=
+        default: grepTags=
         
 jobs:
   Not-full-reports-run-DEBUG-ACT:
