--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "cy:open": "npx cypress open --config-file cypress.config.ts",
     "cy:open:comp_plex": "npm run cy:open -- --env url=compDev",
     "cy:run": "npx cypress run --config-file cypress.config.ts",
-    "cy:chrome:snapshot_tests": "npm run cy:run -- --env grepTags=@snapshot_tests,grepFilterSpecs=true --browser=chrome",
-    "cy:chrome:update_snapshots": "npm run cy:run -- --env grepTags=@snapshot_tests,grepFilterSpecs=true,updateSnapshots=true --browser=chrome",
+    "cy:chrome:snapshot_tests": "npm run cy:run -- --env grepTags=@snapshot_tests --browser=chrome",
+    "cy:chrome:update_snapshots": "npm run cy:run -- --env grepTags=@snapshot_tests,updateSnapshots=true --browser=chrome",
     "cy:chrome_headed_stage_api": "npm run cy:run -- --browser chrome --headed",
     "cy:chrome_headed_prod_api": "npm run cy:run -- --browser chrome --headed --env url=prod",
     "cy:chrome_headed_dev_api": "npm run cy:run -- --browser chrome --headed --env url=dev",
