--- a/.github/workflows/complex-webapp_weekday_schedule.yml
+++ b/.github/workflows/complex-webapp_weekday_schedule.yml
@@ -31,7 +31,7 @@ jobs:
           github_token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           url: dev
           spec_file: cypress/integration/**
-          tags: grep=,grepTags=@comp_plex,burn=
+          tags: grepTags=@comp_plex
           secret_name: 'Github/Cypress/webapp-e2e-secrets'
         env:
           DD_CIVISIBILITY_AGENTLESS_ENABLED: true
