--- a/.github/workflows/pull_request_check.yml
+++ b/.github/workflows/pull_request_check.yml
@@ -67,7 +67,7 @@ jobs:
           github_token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           url: ${{ steps.define_pull_request_data.outputs.URL }}
           customUrl: ${{ steps.define_pull_request_data.outputs.CUSTOM_URL }}
-          tags: grep=,grepTags=@smoke,burn=
+          tags: grepTags=@smoke
           ref: ${{ github.sha }}
           secret_name: 'Github/Cypress/webapp-e2e-secrets'
         env:
@@ -118,7 +118,7 @@ jobs:
           url: ${{ needs.Run-smoke-tests.outputs.URL }}
           customUrl: ${{ needs.Run-smoke-tests.outputs.CUSTOM_URL }}
           spec_file: ${{ steps.define_specs.outputs.CHANGED_SPECS }}
-          tags: grep=,grepTags=,burn=
+          tags: grepTags=
           ref: ${{ github.sha }}
           secret_name: 'Github/Cypress/webapp-e2e-secrets'
         env:
