--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,6 @@
       "curly": "warn",
       "default-case":"warn",
       "max-len": ["warn", { "code": 120 }],
-      "multiline-comment-style": "warn"
+      // "multiline-comment-style": "warn"
     }
 }
